--- a/Project.Rmd
+++ b/Project.Rmd
@@ -12,9 +12,9 @@ output:
 ---
 
 
-##Project on Customer Analysis for an Online Greeting Card Company
+# Project on Customer Analysis for an Online Greeting Card Company
 
-#Problem Statement
+## Problem Statement
 
 Our client is an online greeting card company. The company offers monthly subscriptions at a rate of $1 per month for access to their eCard website. The client is interested in understanding the life-time value (ltv) of their customers.
 The life-time value of a customer is defined as the total revenue earned by the company over the course of their relationship with the customer.
@@ -35,9 +35,9 @@ The following is a description of each field captured in the enclosed data set c
 |------------|-------------------------------------------------------------------------------------|
 
 - Key tasks
- -Develop an attrition model, to predict whether a customer will cancel their subscription in the near future. Characterize your model performance.
- -Develop a model for estimating the ltv of a customer. Characterize your model performance.
- -Develop a customer segmentation scheme. Include in this scheme the identification of sleeping customers, those that are no longer active but have not canceled their account.
+  - Develop an attrition model, to predict whether a customer will cancel their subscription in the near future. Characterize your model performance.
+  - Develop a model for estimating the ltv of a customer. Characterize your model performance.
+  - Develop a customer segmentation scheme. Include in this scheme the identification of sleeping customers, those that are no longer active but have not canceled their account.
 
 ```{r, message=FALSE}
 library(dplyr)
@@ -90,7 +90,7 @@ customer.data <- transform(
 kable(summary(customer.data), digits = c(3, 3, 3, 3), format = "markdown")
 
 ```
-#Data pre-processing 
+## Data pre-processing 
 
 Before developing models to address the tasks, we must first pre-process the data. This is done by creating multiple subsets 
 of the data, with aggregated or other statistical details.
@@ -202,6 +202,7 @@ customer.data$lifespan <- customer.lifespan$lifespan[match(customer.data$id,cust
 kable(summary(customer.lifespan), digits = c(3, 3, 3, 3), format = "markdown")
 
 ```
+
 We have a dataset that defines the averages over a month based range, we now calculate the overall averages per customer for the `pages`, `onsite` and `completed` predictors. This is put into the `customer.overall.means` dataset with the following columns: 
 
 |      Data Field       | Description                                                                         | 
@@ -270,6 +271,7 @@ panel.cor <- function(x, y, digits = 2, prefix = "", cex.cor, ...)
 pairs(customer.overall.means[,c(-1)], lower.panel = panel.cor) 
 
 ```
+
 - From the above plots, we see that most of the predictors have very low correlation among themselves. While `pages` and `completed` have a .76 correlation between them, we still consider both of them as part of the model as the value is not too high to imply complete correlation. Hence removing either could cause the model to miss out on certain insights.
 
 - After the preliminary data processing we create an `ltv_afterProcess` dataset containing the original data from the `customer.data` dataset with the addition of `CompletedVSHoliday` and `OnsiteVSEntered` columns. 
@@ -335,6 +337,7 @@ aggregatedCustomerSums <- dplyr::rename(aggregatedCustomerSums, id = Customerid,
 #Summary of the aggregated summation of each customer 
 kable(summary(aggregatedCustomerSums), digits = c(3, 3, 3, 3), format = "markdown")
 ```
+
 Given below is the utility method to print out the performance metrics (Accuracy, Sensitivity, Specificity, PPV and NPV) for the models.
 
 ```{r}
@@ -372,11 +375,11 @@ classMetrics <- function(conf.mat) {
 ## 1.	Develop an attrition model, to predict whether a customer will cancel their subscription in the near future. Characterize your model performance.
 
 - To address this task, we look into two possible methods of predicting subscription cancellations: 
- -In the first method, we segment/cluster the customer base into groups based on their user activity. Using these segments, we predict whether a customer would move into a lesser active/likely to cancel group. 
- -In the second method, we classify our customer base on their recent subscription status to determine trends that can be used to predict the how much more likely a customer is to cancel their subscription.
+  - In the first method, we segment/cluster the customer base into groups based on their user activity. Using these segments, we predict whether a customer would move into a lesser active/likely to cancel group. 
+  - In the second method, we classify our customer base on their recent subscription status to determine trends that can be used to predict the how much more likely a customer is to cancel their subscription.
 
 
-#First Method: predict whether a customer will cancel their subscription in the near future based on different segments customer
+#### First Method: predict whether a customer will cancel their subscription in the near future based on different segments customer
 
 We will try to determine if we can segment the customers into buckets and determine 
 if any behaviour related to their average online time, completed orders can be used to 
@@ -384,10 +387,10 @@ predict whether a customer will cancel their subscription in the near future
 
 - First pass analysis of the predictors that would be used via Clustering and then assosiate the
 users into the appropriate segments:
-`Active`  - Customers who are actively using the website and likely to keep subscribing
-`Napping` - Customers who are mostly active but have a few days of almost 0 activity. They are unlikely to cancel their subscription in the near future
-`Sleepin` - Customers who are not very active and are more likely to leave the subscription in the coming months
-`Cancelled` - Customers who have cancelled and will cancel for sure.
+  - `Active`  - Customers who are actively using the website and likely to keep subscribing
+  - `Napping` - Customers who are mostly active but have a few days of almost 0 activity. They are unlikely to cancel their subscription in the near future
+  - `Sleepin` - Customers who are not very active and are more likely to leave the subscription in the coming months
+  - `Cancelled` - Customers who have cancelled and will cancel for sure.
  
 - Dataset used : `customer.overall.means`
 
@@ -407,6 +410,7 @@ str(km.res)
 #   labels=2, lines=0)
 fviz_cluster(km.res, data = std.customer)
 ```
+ 
  - K-Means seems to be very crowded and not very interpretatble. Let us try Heirarchical Clustering
 
 ```{r}
@@ -446,17 +450,20 @@ p <- ggplot(hierarchical.dendogram$segments) +
   ylim(-3, 15)+ ggtitle("Dendogram for Customer Segmentation")
 print(p)
 ```
+
 - The dendogram is too crowded and so we first try 5 segments and view the data
 
 ```{r}
 members = cutree(hierarchical.cluster, k = 5)
 aggregate(segmented.customers, by = list(members), mean)
 ```
+
  - We can try to understand the profile of each segment.
  - Customer falling under segment/group2 2 and 4 are likely to have left or leave the subscription (in a month or two). The number of pages visited on average is the least (for group 4) and their life span is large. These are customers who most likely got bored or found other resources. The latter ratio of last month to prev seems to have increased by almost 100% when comapred to the last to first month ratio. 
  - Similarly, we see how customers belonging to the segment/group 1 have an average status towards 2. Their last month to first month login ratio as well as the prev to last month ratio is the highest. We can say that customers that come under this segment are eventually likely to unscribe from the e-card greeting subscription. 
 
 - Let us try decreasing the segments to 4 to see if more distinct status based segments can be obtained 
+
 ```{r}
 # decreasing the segments to 4
 members = cutree(hierarchical.cluster, k = 4)
@@ -465,6 +472,7 @@ segmented.customers.df <- segmented.customers.df %>% dplyr::rename(Type = Group.
 segmented.customers.df$Type <- c("Sleeping", "Cancelled", "Active", "Napping" )
 segmented.customers.df
 ```
+
 - We are able to see 4 disticnt groups and hence segregate the users into one of the categories - `Sleeping`, `Cancelled`, `Napping` and `Active`. We assign these categories to the respective users.
  - In general we notice that as the lifespan increases many customers tend to stop/cancel the subscription. This is alarming to the company as it is clear that more effort must be maintained in retaining current subscribers. A clear indication that customers would leave based on increasing lifespan is the difference between the two ratios. Larger the lastToPrevLogin ratio compared to the lastToFirst the more likely that the customer would stop the subscription. 
  - However, we notice that customers are more likely to stay on, even if their lifespan on average is large, if their browsing ratios are maintained within a 50% to 80% range.
@@ -483,7 +491,7 @@ segmented.customers$segment <- members
 kable(summary(segmented.customers), digits = c(3, 3, 3, 3), format = "markdown")
 ```
  
-#QQ plot visualization
+##### QQ plot visualization
 We now construct the data to draw the QQ plot to examine the performance of our groupings.
 
 ```{r}
@@ -538,15 +546,16 @@ ggplot(data = df2, aes(x = xq, y = lifespan.norm)) +
   labs(title = 'QQ plots', x = 'Normal Quantiles', y = 'lifespan Quantiles')+
   facet_grid(status.label ~ segment.label)
 ```
---In general, we can notice that there are no data fall in [Cancelled - Acive User] pair and [Active - Non-Active User] pair, which means our clustering performance is great based of the observation of the quantile plot.
+
+- In general, we can notice that there are no data fall in [Cancelled - Acive User] pair and [Active - Non-Active User] pair, which means our clustering performance is great based of the observation of the quantile plot.
 On the one hand, it is interesting to metion the distribution of Napping and Sleeping user by Active user is quite similar in the first QQ plot. However, it changes a lot in the second QQ plot. It means we can assume that the customer performance of napping and sleeping user is similar. However, their lifetime is totolly different, the ifespan for napping user would be predictable while sleeping user is quite hard to predict.
 On the other hand, in term of the [napping-Non-Active User pair], we can observe the distribution of them all fall in the first harf quantails. which means the size and them is quite small and distribution looks quite wield. It makes sense to us, because if the original user labeled as non-active user, it should not be labeled as napping user. However, for these small case misclassfication, we can tolerant it.
-In brief, the QQ plot examine our clustering model performance is very good.
+- In brief, the QQ plot examine our clustering model performance is very good.
 
 
 - Using 70% of the `segmented.customers` dataset (with the users segmented into their groups) for training and the remaining 30% as the test set, we run the random forest and  SVM function with our output variable as `segment`.
 
-# Predicting via Random Forest
+##### Predicting via Random Forest
 
 ```{r, cache=TRUE}
 
@@ -571,9 +580,10 @@ customer.segements.rf.table
 # display the measurement of confusion martixs
 classMetrics(customer.segements.rf.table)
 ```
+
 - We see an accuracy of 85.6% is obtained by using Random Forests to predict if a customer would leave the subscription. 
 
-#Predicting using SVM 
+##### Predicting using SVM 
 
 ```{r}
 #Creating the model
@@ -588,6 +598,7 @@ conf.mat.segments.svm
 # display the measurement of confusion martixs
 classMetrics(conf.mat.segments.svm)
 ```
+
 - SVM provides an accuracy of approximately 74% for the same.
 - Hence we conclude that Random forests have a better performance in predicting if a customer will cancel their subscription in the near future based on different segments customer.
 
@@ -602,10 +613,12 @@ plot(rs[[1]], col = "green", lty = 3, add = TRUE)
 legend("bottomright", c("Random Forest","SVM","SVM Best"), col = c("red","green","blue"),
        lty = c(2,3,3), pch = c(-1, -1, -1))
 ```
-The above plot shows the ROC curves for the Random Forest (in red) and the SVM (in green).
+
+- The above plot shows the ROC curves for the Random Forest (in red) and the SVM (in green).
 From the graph, we see that both Random Forests and SVM have almost similar sensitivity (true positive rate), with SVM very minutely varying at the beginning of the sensitivity-specificity threshold. 
 
-# Second Method: Classification on customer status based on statistical features 
+#### Second Method: Classification on customer status based on statistical features 
+
 - Before developing the model, we first create a `customer.classify` dataset, that contains the statistical features (mean, median, standard deviation and skewness) and corresponding ratios for each customer as described below:
 
 |      Data Field       | Description                                                                         | 
@@ -688,6 +701,7 @@ customer.classify<-transform(
 kable(summary(customer.classify), digits = c(3, 3, 3, 3), format = "markdown")
 
 ```
+
 We need to drop the `id` and `date` columns from the `customer.classify` dataset since we using these predictors will result in an incorrect model for our task.
 
 ```{r}
@@ -708,7 +722,7 @@ customer.classify.test <- customer.classify[-classify.train,]
 
 We build 4 models using Logistic Regression, Random Forests, Naive Bayes and SVM to predict if a customer would cancel their subscription or not. All these models use `status` as their output variable with all other variables acting as predictors.
 
-# Predicting using Logistic Regression
+##### Predicting using Logistic Regression
 
 ```{r,cache = TRUE}
 #create the logistic regression model and use the model for predicting using the test set
@@ -729,7 +743,8 @@ classMetrics(customer.classify.logit.table)
 ```
 - The logistic regression has an accuracy of 83.53%. This is a good classification.
 
-# Predicting using Random Forest
+##### Predicting using Random Forest
+
 ```{r,cache = TRUE}
 # build the random forest model for classification
 customer.classify.rf <- randomForest(status~., data=customer.classify.train, ntree=500, proximity=T,na.action = na.roughfix)
@@ -741,9 +756,11 @@ customer.classify.rf.table
 # display the measurement of confusion martixs
 classMetrics(customer.classify.rf.table)
 ```
+
 - The random forest model provides an accuracy of 80.32%. It does not perform as well as the Logistic Regression.
 
-# Predicting using Naive Bayes
+##### Predicting using Naive Bayes
+
 ```{r}
 # build the naive bayes model
 customer.classify.nb <-naiveBayes(status ~., data = customer.classify.train, laplace=1)
@@ -756,9 +773,11 @@ customer.classify.nb.table
 # display the measurement of confusion martixs
 classMetrics(customer.classify.nb.table)
 ```
+
 - Accuracy attained using Naive Bayes is 68.62%. It it considerably low when compared to Random Forests and Naive Bayes.
 
-# Predicting using SVM
+##### Predicting using SVM
+
 ```{r}
 # create the SVM model
 customer.classify.svm <-svm(status~ . , data = customer.classify.train, type = 'C-classification', kernel = 'radial')
@@ -770,6 +789,7 @@ customer.classify.svm.table
 # display the measurement of confusion martixs
 classMetrics(customer.classify.svm.table)
 ```
+
 - SVM appears to be the best model with an accuracy of 83.98% and overall metrics, with the logistic regression model following closely behind.
 
 ```{r, fig.height = 5, fig.width = 5}
@@ -789,11 +809,15 @@ plot(rs[[1]], col = "green", lty = 3, add = TRUE)
 legend("bottomright", c("Random Forest","Logistic Regression","Naive Bayes","SVM"), col = c("red","black","blue","green"),
        lty = c(2,3,3,3), pch = c(-1, -1, -1, -1))
 ```
-The above plot shows the ROC curves for the Random Forest (in red), Logistic Regression (in black), Naive Bayes (in blue) and the SVM (in green).
+
+- The above plot shows the ROC curves for the Random Forest (in red), Logistic Regression (in black), Naive Bayes (in blue) and the SVM (in green).
 From the graph, we see that both Logistic Regression and SVM have almost similar sensitivity (true positive rate), with SVM very minutely having a higher sensitivity-specificity threshold with higher sensitivity/specificity. As specificity increases Random forests also meet the same level of sensitivity as Logistic Regression and SVM. 
 
 
 ## 2. Develop a model for estimating the ltv of a customer. Characterize your model performance.
+
+We use the `aggregatedCustomerSums` dataset with the addition of the `lifespan` in terms of months. This new term is called the `lifespanByMonth`. 
+From this new dataset called the `aggregatedCustomerSumsTask2`, we drop predictors that will not help with the model performance as shown in the below code.
 
 ```{r}
 aggregatedCustomerSumsTask2 <- transform(
@@ -804,6 +828,8 @@ aggregatedCustomerSumsTask2 <- transform(
 aggregatedCustomerSumsTask2.drop <- c("id","status","gender","lifespan","decisiveratio","holiday.ratio","holiday.user")
 aggregatedCustomerSumsTask2 <- aggregatedCustomerSumsTask2[,!(names(aggregatedCustomerSumsTask2) %in% aggregatedCustomerSumsTask2.drop)]
 ```
+
+Using this, we now cluster the data into 3 LTV groups Low, Medium and High via K-Means.
 
 ```{r}
 set.seed(42)
@@ -819,9 +845,12 @@ km.ltv <- kmeans(std.aggregatedCustomerSumsTask2, 3, nstart = 25)
 str(km.ltv)
 fviz_cluster(km.ltv, data = std.aggregatedCustomerSumsTask2)
 ```
+- Using these new groupings, a new dataset called `clustered.ltv` is created with the following columns:
+
+
 
 ```{r}
-# decreasing the segments to 4
+
 clustered.ltv <- data.frame(km.ltv$centers)
 clustered.ltv <- data.frame(Type = c("Medium LTV", "High LTV", "Low LTV"),clustered.ltv)
 clustered.ltv <- transform (
@@ -832,8 +861,10 @@ clustered.ltv <- transform (
   completed = completed * max(aggregatedCustomerSumsTask2),
   lifespanByMonth = lifespanByMonth * max(aggregatedCustomerSumsTask2)
 )
+
 clustered.ltv$lifetimeValue = clustered.ltv$lifespanByMonth * 1
 clustered.ltv
+
 ```
 
 - Since predicting “specific” lifetime value might not generate much business value, we would like to segment our customers into three groups: High LTV group, Medium LTV group and Low LTV group.  By segmenting our customers into three groups, we can design different business plans for different groups. 
@@ -843,7 +874,11 @@ clustered.ltv
 
 ## 3.	Develop a customer segmentation scheme. Include in this scheme the identification of sleeping customers, those that are no longer active but have not canceled their account.
 
-# Segmentation 1: Segmentation 1: Regular(users who have completed regularly irrespective of holidays), Sleeping, Inactive (canceled); Holiday User and Non Holiday use 
+- There are multiple ways we can segment the customers. For this task we look into two possible ways of doing so: 
+  - In the first segmentation, we group the customer base into Regularly active, Sleeping and Inactive customers. We also try to understand the possibility of groups based on Holiday vs Non-Holiday users. 
+  - In the second segmentation, we group customers based on their decisiveness in placing orders i.e. Decisive, Tentative and Hesitant customers.
+
+#### Segmentation 1: Regular(users who have completed regularly irrespective of holidays), Sleeping, Inactive (canceled); Holiday User and Non Holiday use 
  
 
 - In this section, the holiday user label depends on the proportion of the aggregrated sum of orders which completed in holiday, we treat the quantile distribution which larger than the third quantaile as the holiday user.
@@ -888,12 +923,13 @@ for(i in seq(len)){
 customer.data$userType <- user.type
 ```
 
+From the `customer.data` dataset, we pick the below for our model.
 
 |      Data Field       | Description                                                                         | 
 |-----------------------|-------------------------------------------------------------------------------------|
 |     `pages`           | The overall average number of pages visited by the customer.                        |
 |     `onsite`          | The overall average number of minutes spent on the site by the customer.            |
-|     `userType`       | The user type which belong to the cluster number 1,2 and 3           |
+|     `userType`        | The user type which belong to the cluster number 1,2 and 3                          |
 
 ```{r}
 #select the data we need, we do not want to overfit the model, and hence will only include all the data. 
@@ -917,9 +953,10 @@ dt = sort(sample(nrow(customer.data.segOne), nrow(customer.data.segOne)*.7))
 train.segOne<-customer.data.segOne[dt,]
 test.segOne<-customer.data.segOne[-dt,]
 ```
+
 -- In this section, we would use different classfication models to predict the user type based on the total page number and total onsite minutes. The result will be analyzed by confusion matrix and several classifer performance metrics.
 
-#random forest
+##### Predicting using Random Forest
 ```{r}
 customer.segOne.rf <- randomForest(
   as.factor(userType) ~ ., 
@@ -941,8 +978,7 @@ classMetrics(customer.segOne.rfResult)
 ```
 
 
-
-# Logistic Regression
+##### Predicting using Logistic Regression
 
 ```{r}
 #create the logistic regression model with output as userType and inputs as pages, onsite, entered and completed.
@@ -958,7 +994,7 @@ prop.table(customer.segOne.lr.conf)
 classMetrics(customer.segOne.lr.conf)
 ```
 
-# Naive Bayes
+##### Predicting using Naive Bayes
 
 ```{r}
 #Construct a naive bayes classification model on the train data set
@@ -973,10 +1009,12 @@ prop.table(customer.segOne.nb.conf)
 # display the measurement of confusion martixs
 classMetrics(customer.segOne.nb.conf)
 ```
-Based on the observation of the models of Random Forest, Logistic Regression, Naive Bayes, we can found that Random Forest has the best performance.
+
+- Based on the observation of the models of Random Forest, Logistic Regression, Naive Bayes, we can found that Random Forest has the best performance.
 
 
 -- Visualize the ROC graph
+
 ```{r, fig.height = 5, fig.width = 5}
 # Plotthe performance of each model
 roc.Seg1.rf <- multiclass.roc(test.segOne$userType, as.numeric(customer.segOne.pred))
@@ -991,12 +1029,13 @@ plot(rs[[1]], col = "blue", lty = 3, add = TRUE)
 legend("bottomright", c("Random Forest","Logistic Regression","Naive Bayes"), col = c("red","black","blue"),
        lty = c(2,3,3), pch = c(-1, -1, -1))
 ```
-The above plot shows the ROC curves for the Random Forest (in red), Logistic Regression (in black), Naive Bayes (in blue).
+
+- The above plot shows the ROC curves for the Random Forest (in red), Logistic Regression (in black), Naive Bayes (in blue).
 From the graph, we see that both Logistic Regression and Random Forest have almost similar sensitivity (true positive rate), with Naive Bayes very minutely having a higher sensitivity-specificity threshold with higher sensitivity/specificity. As specificity increases Naive Bayes also meet the same level of sensitivity as Logistic Regression and Random Forest.
 
 
+#### Segmentation 2: Decisive customers, Tentative customers, Hesitant customers
 
-# Segmentation 2: Decisive customers, Tentative customers, Hesitant customers
 - Variables: Gender, onsite, pages, entered, completed
 - Classification label: completed / entered 
   - 2: if the `decisiveratio` of that customer is greater or equal to `r summary(aggregatedCustomerSums$decisiveratio)[5]` then we classfy the customer as decisive
@@ -1012,11 +1051,13 @@ summary(aggregatedCustomerSums$decisiveratio)
 |-----------------------|-------------------------------------------------------------------------------------|
 |     `pages`           | The overall average number of pages visited by the customer.                        |
 |     `onsite`          | The overall average number of minutes spent on the site by the customer.            |
-|     `userType`       | The user type which belong to the cluster number 1,2 and 3           |
+|     `userType`        | The user type which belong to the cluster number 1,2 and 3                          |
 |     `holiday`         | The total number of holiday orders by the customer.                                 |
-|     `gender`          | User gender ‘M’- male, ‘F’- female.     |
-|     `lifespan`        | The lifespan of the customer taken from the `customer.lifespan` dataset.  
-|     `deisivelabel`        | we define customer has three types -- decisive, tentative and hesitant and label them as 2, 1 and 0 repspectively
+|     `gender`          | User gender ‘M’- male, ‘F’- female.                                                 |
+|     `lifespan`        | The lifespan of the customer taken from the `customer.lifespan` dataset.            | 
+|     `deisivelabel`    | we define customer has three types -- decisive, tentative and hesitant and label    |
+|                       | them as 2, 1 and 0 repspectively                                                    |
+|-----------------------|-------------------------------------------------------------------------------------|
 
 ```{r}
 # create data labels 
@@ -1039,10 +1080,10 @@ decisive.train<-rbind(train.h, train.t, train.d)
 decisive.test<-rbind(test.h, test.t, test.d)
 ```
 
-
 -- In this section, we would use five classfication models to predict the customer decisive label based on several features -- pages, onsite, userType, holiday, gender, lifespan and deisivelabel. The result will be analyzed by confusion matrix and several classifer performance metrics.
 
-# Random Forest
+##### Predicting using Random Forest
+
 ```{r, cache = TRUE}
 # build the random forest model for classification
 customer.rf <- randomForest(decisivelabel~., data=decisive.train, ntree=500, proximity=T)
@@ -1055,7 +1096,8 @@ customer.rf.table
 classMetrics(customer.rf.table)
 ```
 
-# KNN
+##### Predicting using KNN
+
 ```{r}
 train_control <- trainControl(method = "cv", number = 10)
 customer.knn <- train(decisivelabel~., data = decisive.train, trControl = train_control, method = "knn")
@@ -1068,7 +1110,8 @@ customer.knn.table
 classMetrics(customer.knn.table)
 ```
 
-# Mulrinomial Logistic Regression
+##### Predicting using Mulrinomial Logistic Regression
+
 ```{r}
 decisve.ml <- multinom(decisivelabel ~ . , data = decisive.train)
 decisve.ml
@@ -1080,7 +1123,8 @@ conf.mat.logit
 classMetrics(conf.mat.logit)
 ```
 
-# Naive Bayes
+##### Predicting using Naive Bayes
+
 ```{r}
 decisive.nb <-naiveBayes(decisivelabel ~ . , data = decisive.train, laplace=1)
 decisive.nb.pred <- predict(decisive.nb, decisive.test)
@@ -1091,7 +1135,8 @@ conf.mat.nb
 classMetrics(conf.mat.nb)
 ```
 
-#SVM
+##### Predicting using SVM
+
 ```{r}
 decisive.svm <-svm(decisivelabel ~ . , data = decisive.train, type = 'C-classification', kernel = 'radial')
 decisive.svm.pred <- predict(decisive.svm, decisive.test)
@@ -1124,5 +1169,6 @@ plot(rs[[1]], col = "green", lty = 3, add = TRUE)
 legend("bottomright", c("Random Forest","KNN","Logistic Regression","Naive Bayes","SVM"), col = c("red","steelblue","black","blue","green"),
        lty = c(2,3,3,3,3), pch = c(-1, -1, -1, -1, -1))
 ```
-The above plot shows the ROC curves for the Random Forest (in red),KNN (in steelblue) Logistic Regression (in black), Naive Bayes (in blue) and SVM (in green).
+
+- The above plot shows the ROC curves for the Random Forest (in red),KNN (in steelblue) Logistic Regression (in black), Naive Bayes (in blue) and SVM (in green).
 From the graph, we see that only the performance of Random Forest looks acceptable.
